--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,9 @@ html, body, :root{
   height: 100%;
 }
 
+.clip-left {
+  clip-path: polygon(20px 0, 100% 0, 100% 100%, 20px 100%);
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
